--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ name = "zip"
 version = "0.0.1"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 
-[dependencies.flatestream]
-git = "https://github.com/mvdnes/flatestream-rs.git"
+[dependencies.flate2]
+git = "https://github.com/alexcrichton/flate2-rs.git"
