Do not upload docs of dependencies in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
 script:
   - cargo build
   - cargo test
-  - cargo doc
+  - cargo doc --no-deps
 
 after_script:
   - cd target && curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
