--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 [dependencies.flate2]
 git = "https://github.com/alexcrichton/flate2-rs.git"
 
+[dependencies.time]
+git = "http://github.com/rust-lang/time"
+
 [[bin]]
 name = "extract"
 test = false
