--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,9 @@ name = "zip"
 version = "0.0.1"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 
-[dependencies.flate2]
-git = "https://github.com/alexcrichton/flate2-rs.git"
-
-[dependencies.time]
-git = "http://github.com/rust-lang/time"
+[dependencies]
+flate2 = "*"
+time = "*"
 
 [[bin]]
 name = "extract"
