--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "zip"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 license = "MIT"
 repository = "https://github.com/mvdnes/zip-rs.git"
@@ -11,6 +11,7 @@ Library to support the reading and writing of zip files.
 
 [dependencies]
 flate2 = "*"
+bzip2 = "*"
 time = "*"
 
 [[bin]]
