--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "zip"
-version = "0.0.2"
+version = "0.0.3"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 license = "MIT"
 repository = "https://github.com/mvdnes/zip-rs.git"
@@ -16,6 +16,11 @@ time = "*"
 
 [[bin]]
 name = "extract"
+test = false
+doc = false
+
+[[bin]]
+name = "extract_lorem"
 test = false
 doc = false
 
