--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,14 @@ description = """
 Library to support the reading and writing of zip files.
 """
 
-[dependencies]
-flate2 = "*"
-bzip2 = "*"
-time = "*"
+[dependencies.flate2]
+git = "https://github.com/alexcrichton/flate2-rs"
+
+[dependencies.bzip2]
+git = "https://github.com/alexcrichton/bzip2-rs"
+
+[dependencies.time]
+git = "https://github.com/rust-lang/time.git"
 
 [[bin]]
 name = "extract"
