--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "zip"
-version = "0.0.11"
+version = "0.0.12"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 license = "MIT"
 repository = "https://github.com/mvdnes/zip-rs.git"
@@ -10,6 +10,6 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
-flate2 = "*"
+flate2 = "^0.1"
 bzip2 = "*"
 time = "*"
