Use old_io for bzip2 aswell, until own reform is done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ Library to support the reading and writing of zip files.
 
 [dependencies]
 flate2 = "^0.1"
-bzip2 = "*"
+bzip2 = "^0.1"
 time = "*"
