--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "zip"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 license = "MIT"
 repository = "https://github.com/mvdnes/zip-rs.git"
@@ -12,5 +12,5 @@ Library to support the reading and writing of zip files.
 [dependencies]
 flate2 = "^0.2"
 bzip2 = "^0.2"
-time = "*"
+time = "^0.1"
 podio = "^0.0"
