Use rust-docs doc upload script

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
     - rustdoc --test README.md -L target
 
 after_success:
-    - .travis/travis-doc-upload.sh
+    - curl https://mvdnes.github.io/rust-docs/travis-doc-upload.sh | sh
