Switch build to beta

--- a/.travis/travis-doc-upload.cfg
+++ b/.travis/travis-doc-upload.cfg
@@ -1,4 +1,4 @@
 PROJECT_NAME=zip-rs
 DOCS_REPO=mvdnes/rust-docs.git
 SSH_KEY_TRAVIS_ID=70a3dd61d838
-DOC_RUST_VERSION=1.0.0-beta.2
+DOC_RUST_VERSION=beta
