Switch to Travis only CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ script:
     - cargo test
     - cargo doc --no-deps
     - rustdoc --test README.md -L target/debug
+
+after_success:
+    - curl https://mvdnes.github.io/rust-docs/travis-doc-upload.sh | bash
