--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "zip"
-version = "0.1.7"
+version = "0.1.8"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 license = "MIT"
 repository = "https://github.com/mvdnes/zip-rs.git"
@@ -10,7 +10,7 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
-flate2 = "^0.2.7"
-bzip2 = "^0.2.3"
-time = "^0.1.25"
-podio = "^0.1.3"
+flate2 = "0.2"
+bzip2 = "0.2"
+time = "0.1"
+podio = "0.1"
