--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 
 name = "zip"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 license = "MIT"
 repository = "https://github.com/mvdnes/zip-rs.git"
+documentation = "http://mvdnes.github.io/rust-docs/zip-rs/zip/index.html"
+keywords = ["zip", "archive"]
 description = """
 Library to support the reading and writing of zip files.
 """
