--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ install:
     - ps: Start-FileDownload "http://static.rust-lang.org/dist/channel-rust-${env:RUST_CHANNEL}"
     - ps: $env:RUST_INSTALLER = Select-String "${env:RUST_INSTALL_TRIPLE}.*exe" "channel-rust-${env:RUST_CHANNEL}" | select -exp line
     - ps: Start-FileDownload "http://static.rust-lang.org/dist/${env:RUST_INSTALLER}"
-    - '%RUST_INSTALLER% /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"'
+    - '%RUST_INSTALLER% /VERYSILENT /NORESTART /DIR="C:\Rust"'
     - call "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat" amd64
-    - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
+    - SET PATH=C:\Rust\bin;%PATH%
     - SET PATH=%PATH%;C:\MinGW\bin
     - rustc --version
     - cargo --version
