--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,9 +4,8 @@ environment:
           RUST_CHANNEL: stable
         - RUST_INSTALL_TRIPLE: x86_64-pc-windows-gnu
           RUST_CHANNEL: stable
-
-platform:
-    - x64
+        - RUST_INSTALL_TRIPLE: x86_64-pc-windows-msvc
+          RUST_CHANNEL: nightly
 
 install:
     - ps: Start-FileDownload "http://static.rust-lang.org/dist/channel-rust-${env:RUST_CHANNEL}"
@@ -14,9 +13,11 @@ install:
     - ps: Start-FileDownload "http://static.rust-lang.org/dist/${env:RUST_INSTALLER}"
     - '%RUST_INSTALLER% /VERYSILENT /NORESTART /DIR="C:\Rust"'
     - call "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat" amd64
-    - 'SET PATH=%PATH%;C:\Rust\bin'
-    - 'SET PATH=%PATH%;C:\Rust\bin\rustlib\%RUST_INSTALL_TRIPLE%\bin'
-    - rustc --version
+    - ps: Invoke-WebRequest -UserAgent wget -Uri "http://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/mingw-builds/5.1.0/threads-win32/seh/x86_64-5.1.0-release-win32-seh-rt_v4-rev0.7z/download" -OutFile mingw64.7z
+    - ps: 7z x -oC:\ mingw64.7z > $null
+    - ps: $env:path = "C:\mingw64\bin;C:\Rust\bin;" + $env:path
+    - gcc --version
+    - rustc --version --verbose
     - cargo --version
 
 build: false
