--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,11 @@ Library to support the reading and writing of zip files.
 
 [dependencies]
 flate2 = "0.2"
-bzip2 = "0.2"
 time = "0.1"
 podio = "0.1"
 msdos_time = "0.1"
+bzip2 = { version = "0.2", optional = true }
+
+[features]
+default = ["bzip2"]
+no-bzip2 = []
