Provide the rust_backend feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
-flate2 = "0.2"
+flate2 = { git = "https://github.com/alexcrichton/flate2-rs", default-features = false }
 time = "0.1"
 podio = "0.1"
 msdos_time = "0.1"
@@ -22,4 +22,5 @@ bzip2 = { version = "0.3", optional = true }
 walkdir = "1.0"
 
 [features]
-default = ["bzip2"]
+default = ["bzip2", "flate2/default"]
+rust_backend = ["flate2/rust_backend"]
