--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
-flate2 = { git = "https://github.com/alexcrichton/flate2-rs", default-features = false }
+flate2 = { version = "1.0", default-features = false }
 time = "0.1"
 podio = "0.1"
 msdos_time = "0.1"
