--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ bzip2 = { version = "0.3", optional = true }
 walkdir = "1.0"
 
 [features]
-default = ["bzip2", "flate2"]
+deflate = ["flate2"]
+default = ["bzip2", "deflate"]
