--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
-flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true}
+flate2 = { version = "1.0", default-features = false, optional = true}
 time = "0.1"
 podio = "0.1"
 msdos_time = "0.1"
@@ -23,4 +23,6 @@ walkdir = "1.0"
 
 [features]
 deflate = ["flate2"]
-default = ["bzip2", "deflate"]
+default = ["bzip2", "deflate", "rust_backend"]
+rust_backend = ["flate2/rust_backend"]
+zlib = ["flate2/zlib"]
