--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
+chrono = { version = "0.4", optional = true }
 flate2 = { version = "1.0", default-features = false, optional = true }
-time = "0.1"
+time = { version = "0.1", optional = true }
 podio = "0.1"
-msdos_time = "0.1"
+msdos_time = { version = "0.1", optional = true }
 bzip2 = { version = "0.3", optional = true }
 
 [dev-dependencies]
@@ -25,4 +26,4 @@ walkdir = "1.0"
 deflate = ["flate2", "flate2/rust_backend"]
 deflate-miniz = ["flate2", "flate2/miniz-sys"]
 deflate-zlib = ["flate2", "flate2/zlib"]
-default = ["bzip2", "deflate"]
+default = ["bzip2", "deflate", "time", "msdos_time"]
