--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ notifications:
 script:
     - cargo test
     - cargo test --no-default-features
-    - cargo test --no-default-features --features "deflate-zlib"
+    - [ "$TRAVIS_RUST_VERSION" = "1.20.0" ] || cargo test --no-default-features --features "deflate-zlib"
     - cargo test --no-default-features --features "deflate-miniz"
     - cargo doc --no-deps
     - rustdoc --test README.md -L target/debug
