--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ notifications:
         on_failure: always
 
 script:
-    - cargo test
+    - |
+      [ "$TRAVIS_RUST_VERSION" = "1.20.0" ] || cargo test
     - cargo test --no-default-features
     - |
       [ "$TRAVIS_RUST_VERSION" = "1.20.0" ] || cargo test --no-default-features --features "deflate-zlib"
