--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
     - |
       [ "$TRAVIS_RUST_VERSION" = "1.20.0" ] || cargo test --no-default-features --features "deflate-zlib"
     - cargo test --no-default-features --features "deflate-miniz"
-    - cargo doc --no-deps
+    - cargo doc --no-deps --no-default-features --features "deflate-miniz,bzip2"
     - rustdoc --test README.md -L target/debug
 
 after_success:
