--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,15 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
-flate2 = { version = "1.0", default-features = false, optional = true }
 time = "0.1"
 podio = "0.1"
 msdos_time = "0.1"
 bzip2 = { version = "0.3", optional = true }
+libflate = { version = "0.1.16", optional = true }
 
 [dev-dependencies]
 walkdir = "1.0"
 
 [features]
-deflate = ["flate2", "flate2/rust_backend"]
-deflate-miniz = ["flate2", "flate2/miniz-sys"]
-deflate-zlib = ["flate2", "flate2/zlib"]
+deflate = ["libflate"]
 default = ["bzip2", "deflate"]
