--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,8 @@ notifications:
         on_failure: always
 
 script:
-    - |
-      [ "$TRAVIS_RUST_VERSION" = "1.20.0" ] || cargo test
+    - cargo test
     - cargo test --no-default-features
-    - |
-      [ "$TRAVIS_RUST_VERSION" = "1.20.0" ] || cargo test --no-default-features --features "deflate"
-    - cargo test --no-default-features --features "deflate"
     - cargo doc --no-deps
     - rustdoc --test README.md -L target/debug
 
