--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,8 @@ Library to support the reading and writing of zip files.
 """
 
 [dependencies]
-time = "0.1"
+time = { version = "0.1", optional = true }
 podio = "0.1"
-msdos_time = "0.1"
 bzip2 = { version = "0.3", optional = true }
 libflate = { version = "0.1.16", optional = true }
 crc32fast = "1.0"
@@ -26,7 +25,7 @@ walkdir = "1.0"
 
 [features]
 deflate = ["libflate"]
-default = ["bzip2", "deflate"]
+default = ["bzip2", "deflate", "time"]
 
 [[bench]]
 name = "read_entry"
