--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "zip"
-version = "0.5.0"
+version = "0.5.1"
 authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
 license = "MIT"
 repository = "https://github.com/mvdnes/zip-rs.git"
@@ -15,7 +15,7 @@ Library to support the reading and writing of zip files.
 time = { version = "0.1", optional = true }
 podio = "0.1"
 bzip2 = { version = "0.3", optional = true }
-libflate = { version = "0.1.16", optional = true }
+libflate = { version = ">=0.1.21", optional = true }
 crc32fast = "1.0"
 
 [dev-dependencies]
