--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ script:
     - cargo doc --no-deps
     - rustdoc --test README.md -L target/debug
 
-after_success:
-    - curl https://mvdnes.github.io/rust-docs/travis-doc-upload.sh | bash
+#after_success:
+#    - curl https://mvdnes.github.io/rust-docs/travis-doc-upload.sh | bash
