--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ time = { version = "0.1", optional = true }
 podio = "0.1"
 bzip2 = { version = "0.3", optional = true }
 crc32fast = "1.0"
+thiserror = "1.0"
 
 [dev-dependencies]
 bencher = "0.1"
