--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ edition = "2018"
 [dependencies]
 flate2 = { version = "1.0", default-features = false, optional = true }
 time = { version = "0.1", optional = true }
-podio = "0.1"
+byteorder = "1.3.4"
 bzip2 = { version = "0.3", optional = true }
 crc32fast = "1.0"
 thiserror = "1.0"
