--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ Library to support the reading and writing of zip files.
 edition = "2018"
 
 [dependencies]
+# FIXME(#170): flate2 1.0.15 has an MSRV of 1.36.0, breaking ours. We'll update when we know if this will be addressed
 flate2 = { version = ">=1.0.0, <=1.0.14", default-features = false, optional = true }
 time = { version = "0.1", optional = true }
 byteorder = "1.3"
