--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ Library to support the reading and writing of zip files.
 edition = "2018"
 
 [dependencies]
-flate2 = { version = "1.0.0", default-features = false, optional = true }
 miniz_oxide = { version = "0.4.1", default-features = false, optional = true, features = ["no_extern_crate_alloc"] }
 time = { version = "0.1", optional = true }
 byteorder = "1.3"
@@ -27,9 +26,7 @@ rand = "0.7"
 walkdir = "2"
 
 [features]
-deflate = ["flate2/rust_backend"]
-deflate-miniz = ["flate2/default"]
-deflate-zlib = ["flate2/zlib"]
+deflate = ["miniz_oxide"]
 default = ["bzip2", "deflate", "time"]
 
 [[bench]]
