--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ Library to support the reading and writing of zip files.
 edition = "2018"
 
 [dependencies]
+aes = { version = "0.5.0", optional = true }
+arrayvec = { version = "0.5.1", optional = true }
 flate2 = { version = "1.0.0", default-features = false, optional = true }
 time = { version = "0.1", optional = true }
 byteorder = "1.3"
@@ -24,6 +26,7 @@ rand = "0.7"
 walkdir = "2"
 
 [features]
+aes-crypto = ["aes", "arrayvec"]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
