--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ edition = "2018"
 
 [dependencies]
 aes = { version = "0.5.0", optional = true }
-arrayvec = { version = "0.5.1", optional = true }
 flate2 = { version = "1.0.0", default-features = false, optional = true }
 time = { version = "0.1", optional = true }
 byteorder = "1.3"
@@ -26,7 +25,7 @@ rand = "0.7"
 walkdir = "2"
 
 [features]
-aes-crypto = ["aes", "arrayvec"]
+aes-crypto = ["aes"]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
