--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2018"
 aes = "0.5.0"
 byteorder = "1.3"
 bzip2 = { version = "0.4", optional = true }
+constant_time_eq = "0.1.5"
 crc32fast = "1.0"
 flate2 = { version = "1.0.0", default-features = false, optional = true }
 hmac = "0.9.0"
