--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,15 @@ Library to support the reading and writing of zip files.
 edition = "2018"
 
 [dependencies]
-aes = "0.5.0"
+aes = { version = "0.5.0", optional = true }
 byteorder = "1.3"
 bzip2 = { version = "0.4", optional = true }
-constant_time_eq = "0.1.5"
+constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.0"
 flate2 = { version = "1.0.0", default-features = false, optional = true }
-hmac = "0.9.0"
-pbkdf2 = "0.5.0"
-sha-1 = "0.9.1"
+hmac = {version = "0.9.0", optional = true }
+pbkdf2 = {version = "0.5.0", optional = true }
+sha-1 = {version = "0.9.1", optional = true }
 thiserror = "1.0"
 time = { version = "0.1", optional = true }
 
@@ -29,6 +29,7 @@ rand = "0.7"
 walkdir = "2"
 
 [features]
+aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha-1" ]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
