add aes-crypto feature to default and update README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
 unreserved = []
-default = ["bzip2", "deflate", "time"]
+default = ["aes-crypto", "bzip2", "deflate", "time"]
 
 [[bench]]
 name = "read_entry"
