--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 
 [dependencies]
 flate2 = { version = "1.0.0", default-features = false, optional = true }
-time = { version = "0.1", optional = true }
+time = { version = "0.3", features = ["formatting", "macros" ], optional = true }
 byteorder = "1.3"
 bzip2 = { version = "0.4", optional = true }
 crc32fast = "1.0"
