--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,15 @@ edition = "2018"
 
 [dependencies]
 flate2 = { version = "1.0.0", default-features = false, optional = true }
-time = { version = "0.1", optional = true }
+time = { version = "0.3", features = ["formatting", "macros" ], optional = true }
 byteorder = "1.3"
 bzip2 = { version = "0.4", optional = true }
-crc32fast = "1.0"
-thiserror = "1.0"
-zstd = { version = "0.8", optional = true }
+crc32fast = "1.1.1"
+zstd = { version = "0.10", optional = true }
 
 [dev-dependencies]
-criterion = "0.3"
-rand = "0.7"
+bencher = "0.1"
+getrandom = "0.2"
 walkdir = "2"
 
 [features]
