--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ time = { version = "0.3", features = ["formatting", "macros" ], optional = true 
 byteorder = "1.3"
 bzip2 = { version = "0.4", optional = true }
 crc32fast = "1.1.1"
+strum = "0.23.0"
+strum_macros = "0.23.0"
 zstd = { version = "0.10", optional = true }
 
 [dev-dependencies]
-bencher = "0.1"
+criterion = "0.3.5"
 getrandom = "0.2"
 walkdir = "2"
 
