--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bzip2 = { version = "0.4", optional = true }
 constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.1.1"
 flate2 = { version = "1.0.0", default-features = false, optional = true }
-hmac = {version = "0.12.0", optional = true}
+hmac = { version = "0.12.0", optional = true, features = ["reset"] }
 pbkdf2 = {version = "0.10.0", optional = true }
 sha1 = {version = "0.10.0", optional = true }
 time = { version = "0.3", features = ["formatting", "macros" ], optional = true }
