--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ pbkdf2 = {version = "0.10.1", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", features = ["formatting", "macros" ], optional = true }
 zstd = { version = "0.10.0", optional = true }
+lzma = { version = "0.2.2", optional = true }
 
 [dev-dependencies]
 bencher = "0.1.5"
@@ -34,7 +35,7 @@ deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
 unreserved = []
-default = ["aes-crypto", "bzip2", "deflate", "time", "zstd"]
+default = ["aes-crypto", "bzip2", "deflate", "time", "zstd", "lzma"]
 
 [[bench]]
 name = "read_entry"
