--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", features = ["formatting", "macros" ], optional = true }
 zstd = { version = "0.10.0", optional = true }
 
+[target.'cfg(any(target_arch = "mips", target_arch = "powerpc"))'.dependencies]
+crossbeam-utils = "0.8.8"
+
 [dev-dependencies]
 bencher = "0.1.5"
 getrandom = "0.2.5"
