--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", features = ["formatting", "macros" ], optional = true }
 zstd = { version = "0.10.0", optional = true }
 
-[target.'cfg(any(target_arch = "mips", target_arch = "powerpc"))'.dependencies]
+[target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
 crossbeam-utils = "0.8.8"
 
 [dev-dependencies]
