--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ description = """
 Library to support the reading and writing of zip files.
 """
 edition = "2021"
+rust-version = "1.59.0"
 
 [dependencies]
 aes = { version = "0.7.5", optional = true }
