Add support for deflate-zlib-ng feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
+deflate-zlib-ng = ["flate2/zlib-ng"]
 unreserved = []
 default = ["aes-crypto", "bzip2", "deflate", "time", "zstd"]
 
