Implement shallow copy from within the file being written

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "zip"
-version = "0.6.4"
-authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>", "Marli Frost <marli@frost.red>", "Ryan Levick <ryan.levick@gmail.com>"]
+name = "zip_next"
+version = "0.6.5"
+authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>", "Marli Frost <marli@frost.red>", "Ryan Levick <ryan.levick@gmail.com>",
+"Chris Hennick <hennickc@amazon.com>"]
 license = "MIT"
 repository = "https://github.com/zip-rs/zip.git"
 keywords = ["zip", "archive"]
