--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -11,7 +11,7 @@ cargo-fuzz = true
 [dependencies]
 libfuzzer-sys = "0.4"
 
-[dependencies.zip]
+[dependencies.zip_next]
 path = ".."
 
 # Prevent this from interfering with workspaces
