--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,13 @@ pbkdf2 = {version = "0.12.1", optional = true }
 sha1 = {version = "0.10.5", optional = true }
 time = { version = "0.3.20", optional = true, default-features = false, features = ["std"] }
 zstd = { version = "0.12.3", optional = true }
+replace_with = "0.1.7"
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
 crossbeam-utils = "0.8.15"
+
+[target.'cfg(fuzzing)'.dependencies]
+arbitrary = { version = "1.3.0", features = ["derive"] }
 
 [dev-dependencies]
 bencher = "0.1.5"
