--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -10,6 +10,7 @@ cargo-fuzz = true
 
 [dependencies]
 libfuzzer-sys = "0.4"
+arbitrary = { version = "1.3.0", features = ["derive"] }
 
 [dependencies.zip_next]
 path = ".."
@@ -21,5 +22,11 @@ members = ["."]
 [[bin]]
 name = "fuzz_read"
 path = "fuzz_targets/fuzz_read.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "fuzz_write"
+path = "fuzz_targets/fuzz_write.rs"
 test = false
 doc = false
