Increase memory limit for write fuzz

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,4 +109,4 @@ jobs:
           cargo fuzz build fuzz_write
       - name: run fuzz
         run: |
-          cargo fuzz run fuzz_write -- -timeout=300 -runs=1000000 -max_len=1000000 
+          cargo fuzz run fuzz_write -- -timeout=300 -runs=1000000 -max_len=1000000 -rss_limit_mb=7000
