--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "zip"
 version = "0.6.4"
-authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>", "Marli Frost <marli@frost.red>", "Ryan Levick <ryan.levick@gmail.com>"]
+authors = [
+  "Mathijs van de Nes <git@mathijs.vd-nes.nl>",
+  "Marli Frost <marli@frost.red>",
+  "Ryan Levick <ryan.levick@gmail.com>",
+]
 license = "MIT"
 repository = "https://github.com/zip-rs/zip.git"
 keywords = ["zip", "archive"]
@@ -18,9 +22,11 @@ constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.3.2"
 flate2 = { version = "1.0.23", default-features = false, optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
-pbkdf2 = {version = "0.11.0", optional = true }
-sha1 = {version = "0.10.1", optional = true }
-time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
+pbkdf2 = { version = "0.11.0", optional = true }
+sha1 = { version = "0.10.1", optional = true }
+time = { version = "0.3.7", optional = true, default-features = false, features = [
+  "std",
+] }
 zstd = { version = "0.11.2", optional = true }
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
@@ -31,9 +37,10 @@ bencher = "0.1.5"
 getrandom = "0.2.5"
 walkdir = "2.3.2"
 time = { version = "0.3.7", features = ["formatting", "macros"] }
+tempfile = "3.5.0"
 
 [features]
-aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
+aes-crypto = ["aes", "constant_time_eq", "hmac", "pbkdf2", "sha1"]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
