--- a/zip-format/Cargo.toml
+++ b/zip-format/Cargo.toml
@@ -2,6 +2,8 @@
 name = "zip-format"
 version = "0.1.0"
 edition = "2021"
+description = "no_std primitives for low level interaction with zip archives"
+license = "Unlicense"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
