--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ license-file = "./LICENSE"
 
 [dependencies]
 miniz_oxide = { version = "0.5.1", optional = true }
-zip-format = { version = "0.1.0", path = "zip-format" }
+zip-format = { version = "0.1.0", path = "./zip-format" }
+
+[dev-dependencies]
+file-content = { path = "./file-content" }
 
 [features]
 std = []
