Test more aggressive length limits

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,7 +98,7 @@ jobs:
       - name: run fuzz
         timeout-minutes: 330
         run: |
-          cargo fuzz run fuzz_read -- -timeout=10s -jobs=100 -workers=2 -runs=1000000 -max_len=6000 -dict=fuzz/fuzz.dict
+          cargo fuzz run fuzz_read -- -timeout=10s -jobs=100 -workers=2 -runs=1000000 -max_len=4096 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
@@ -125,7 +125,7 @@ jobs:
       - name: run fuzz
         timeout-minutes: 330
         run: |
-          cargo fuzz run --no-default-features fuzz_read -- -timeout=10s -jobs=100 -workers=2 -runs=1000000 -max_len=5000000000 -dict=fuzz/fuzz.dict
+          cargo fuzz run --no-default-features fuzz_read -- -timeout=10s -jobs=100 -workers=2 -runs=1000000 -max_len=16384 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
@@ -179,7 +179,7 @@ jobs:
       - name: run fuzz
         timeout-minutes: 330
         run: |
-          cargo fuzz run --no-default-features fuzz_write -- -timeout=10s -jobs=100 -workers=2 -runs=10000 -max_len=5000000000 -dict=fuzz/fuzz.dict
+          cargo fuzz run --no-default-features fuzz_write -- -timeout=10s -jobs=100 -workers=2 -runs=10000 -max_len=10000 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
